gitops/platform/kube-state-metrics/middleware-basic-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kube-state-metrics-basic-auth
  namespace: kube-system
spec:
  basicAuth:
    secret: kube-state-metrics-basic-auth
